--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -1,5 +1,5 @@
 erlang_version=18.3
 elixir_version=1.3.4
 always_rebuild=false
-config_vars_to_export=(DATABASE_URL)
+config_vars_to_export=(DATABASE_URL GUARDIAN_SECRET_KEY MAILGUN_API_KEY MAILGUN_DOMAIN SECRET_KEY_BASE)
 runtime_path=/app
